# ouroboros-rs

./: .travis.yml  Cargo.toml  README.md
ouroboros/: Cargo.toml  README.md
ouroboros-sys/: Cargo.toml  README.md  build.rs  wrapper.h
ouroboros-sys/src/: bindings.rs
